Fixed truncation for mobile

--- a/web/main.css
+++ b/web/main.css
@@ -259,12 +259,6 @@
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
   }
-  .line-clamp-2 {
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
-  }
   .line-clamp-3 {
     overflow: hidden;
     display: -webkit-box;
@@ -626,16 +620,15 @@
       line-height: var(--tw-leading, var(--text-3xl--line-height));
     }
   }
-  .sm\:text-lg {
-    @media (width >= 40rem) {
-      font-size: var(--text-lg);
-      line-height: var(--tw-leading, var(--text-lg--line-height));
-    }
-  }
   .sm\:text-xs {
     @media (width >= 40rem) {
       font-size: var(--text-xs);
       line-height: var(--tw-leading, var(--text-xs--line-height));
+    }
+  }
+  .sm\:break-all {
+    @media (width >= 40rem) {
+      word-break: break-all;
     }
   }
   .md\:size-14 {
